[FIX] mail: include activity in the chatter overflow
Before this commit the chatter scroll bar didn't include the planned activities

task-2282325

--- a/addons/mail/static/src/components/chatter/chatter.scss
+++ b/addons/mail/static/src/components/chatter/chatter.scss
@@ -7,6 +7,10 @@
     flex: 1 1 auto;
     flex-direction: column;
     overflow: auto;
+
+    .chatter_overflow {
+      overflow: auto;
+    }
 }
 
 .o_Chatter_composer {
